post edit added

--- a/templates/new_post.html
+++ b/templates/new_post.html
@@ -9,7 +9,7 @@ content %}
       id="title"
       type="text"
       name="title"
-      placeholder="title"
+      placeholder="Enter a title"
     />
     <label for="content" class="form-label">Content</label>
     <input
@@ -17,7 +17,7 @@ content %}
       id="content"
       type="text"
       name="content"
-      placeholder="content"
+      placeholder="Enter a content"
     />
     <div class="buttons mt-4">
       <a class="btn btn-light" href="/users/{{user.id}}">Cancel</a>
