--- a/static/styles/blogly.css
+++ b/static/styles/blogly.css
@@ -3,18 +3,19 @@ body {
   background-color: #fdf0d5;
 }
 img {
-  width: 20rem;
+  width: 30rem;
+  margin-right: 3rem;
 }
 main {
   position: absolute;
   top: 200px;
   left: 400px;
 }
-/*section {
+section {
   position: absolute;
   top: 150px;
   left: 300px;
-}*/
+}
 h1,
 h3 {
   color: #003049;
@@ -55,4 +56,7 @@ h1 {
 }
 .buttons {
   float: right;
+}
+.posts {
+  margin-top: 2rem;
 }
