--- a/templates/post.html
+++ b/templates/post.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %} {% block title %} {{post.title}} {% endblock %} {%
 block content %}
-<h1>{{post.title}}</h1>
-<p>{{post.content}}</p>
-<p>By {{post.user.fullname}}</p>
-<small> {{post.created_at}}</small>
-<div>
-  <a class="btn btn-light" href="/users/{{post.user.id}}">Cancel</a>
-  <form class="form_modif" method="POST">
-    <a class="btn btn-success" href="/posts/{{post.id}}/edit">Edit</a>
-  </form>
-  <form class="form_modif" method="POST">
-    <a class="btn btn-danger" href="/posts/{{post.id}}/delete">Delete</a>
-  </form>
-</div>
+<section>
+  <h1 class="mb-3">{{post.title}}</h1>
+  <p>{{post.content}}</p>
+  <p>By {{post.user.fullname}}</p>
+  <small> {{post.created_at}}</small>
+  <div class="mt-3">
+    <a class="btn btn-light" href="/users/{{post.user.id}}">Cancel</a>
+    <form class="form_modif" method="POST">
+      <a class="btn btn-success" href="/posts/{{post.id}}/edit">Edit</a>
+    </form>
+    <form class="form_modif" method="POST">
+      <a class="btn btn-danger" href="/posts/{{post.id}}/delete">Delete</a>
+    </form>
+  </div>
+</section>
 {% endblock %}
