--- a/templates/user.html
+++ b/templates/user.html
@@ -15,7 +15,7 @@ block content %}
       </form>
 
       <div class="mt-5">
-        <a class="btn btn-light" href="/">Go to Users</a>
+        <a class="btn btn-light" href="/users">Go to Users</a>
       </div>
       <div class="posts">
         <h2>Posts</h2>
