--- a/templates/users.html
+++ b/templates/users.html
@@ -9,7 +9,7 @@ content %}
     </li>
     {% endfor %}
   </ul>
-
-  <a href="/users/new" class="btn btn-success">Add user</a>
+  <a href="/" class="btn btn-lg btn-light">Home</a>
+  <a href="/users/new" class="btn btn-success ms-5">Add user</a>
 </main>
 {% endblock %}
