--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,17 @@ content %}
   </h5>
   <p>{{ post.content }}</p>
   <small>By {{ post.user.fullname }} on {{ post.nicedate }}</small>
-  {% endfor %}
+
+  {% if post.tags %}
+  <p>
+    <b>Tags:</b>
+    {% for tag in post.tags %}
+    <a href="/tags/{{ tag.id }}"
+      ><i class="badge bg-primary">{{ tag.name }}</i></a
+    >
+    {% endfor %}
+  </p>
+  {% endif %} {% endfor %}
   <a href="/users" class="btn btn-info mt-4">See Users</a>
 </div>
 {% endblock %}}
