--- a/templates/tags.html
+++ b/templates/tags.html
@@ -3,7 +3,7 @@
 <main>
   <h1>Tags</h1>
 
-  <ul>
+  <ul class="tag_list">
     {% for tag in tags %}
     <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
     {% endfor %}
