--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,11 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tag</title>
-  </head>
-  <body>
-    <h1>TAG</h1>
-  </body>
-</html>
+{% extends 'base.html' %} {% block title %}{{ tag.name }}{% endblock %} {% block
+content %}
+<section class="container text-center">
+  <h1>{{ tag.name }}</h1>
+
+  <ul class="post_list">
+    {% for post in tag.posts %}
+    <li><a href="/posts/{{ post.id }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+
+  <form>
+    <button
+      formmethod="GET"
+      formaction="/tags/{{ tag.id }}/edit"
+      class="btn btn-primary"
+    >
+      Edit
+    </button>
+    <button
+      formmethod="POST"
+      formaction="/tags/{{ tag.id }}/delete"
+      class="btn btn-danger"
+    >
+      Delete
+    </button>
+  </form>
+</section>
+{% endblock %}
