--- a/templates/post.html
+++ b/templates/post.html
@@ -5,6 +5,16 @@ block content %}
   <p>{{post.content}}</p>
   <p>By {{post.user.fullname}}</p>
   <small> {{post.created_at}}</small>
+  {% if post.tags %}
+  <p>
+    <b>Tags:</b>
+    {% for tag in post.tags %}
+    <a href="/tags/{{ tag.id }}"
+      ><i class="badge bg-primary">{{ tag.name }}</i></a
+    >
+    {% endfor %}
+  </p>
+  {% endif %}
   <div class="mt-3">
     <a class="btn btn-light" href="/users/{{post.user.id}}">Cancel</a>
     <form class="form_modif" method="POST">
