--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %} Edit user {% endblock %} {% block
 content %}
 <div class="container">
-  <h1 class="my-5">Edit a user</h1>
+  <h1 class="my-5">Edit a Post</h1>
 
   <form class="newedit" action="/posts/{{post.id}}/edit" method="POST">
     <div class="mb-3">
@@ -26,6 +26,31 @@ content %}
         value="{{post.content}}"
       />
     </div>
+    <div class="form-check">
+      {% for tag in tags %}
+      <div>
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value="{{ tag.id }}"
+          id="tag_{{ tag.id }}"
+          {%
+          if
+          tag
+          in
+          post.tags
+          %}checked{%
+          endif
+          %}
+          name="tags"
+        />
+        <label class="form-check-label" for="tag_{{ tag.id }}">
+          {{ tag.name }}
+        </label>
+      </div>
+      {% endfor %}
+    </div>
+
     <div class="buttons mt-4">
       <a class="btn btn-light" href="/posts/{{post.id}}">Cancel</a>
       <button class="btn btn-success">Save</button>
