--- a/templates/edit_tag.html
+++ b/templates/edit_tag.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %}Edit Tag{% endblock %} {% block
 content %}
 <div class="container">
-  <h1>Edit a tag</h1>
+  <h1>Edit a Tag</h1>
 
   <form method="POST" action="/tags/{{ tag.id }}/edit">
     <div class="form-group row">
