--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block title %} Edit user {% endblock %} {% block
 content %}
 <div class="container">
-  <h1 class="my-5">Edit a user</h1>
+  <h1 class="my-5">Edit a User</h1>
 
   <form class="newedit" action="/users/{{user.id}}/edit" method="POST">
     <div class="mb-3">
