--- a/templates/edit_tag.html
+++ b/templates/edit_tag.html
@@ -53,7 +53,7 @@ content %}
     <div class="mt-3 form-group row">
       <div class="ml-auto mr-3">
         <a href="/tags" class="btn btn-info">Cancel</a>
-        <button type="submit" class="btn btn-success">Edit</button>
+        <button type="submit" class="btn btn-success">Save</button>
       </div>
     </div>
   </form>
